--- a/voice/src/main/res/layout/activity_main.xml
+++ b/voice/src/main/res/layout/activity_main.xml
@@ -28,4 +28,7 @@
         android:layout_height="wrap_content"
         android:text="stop"
         android:onClick="stop"/>
+    <Chronometer
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
