--- a/recycler/src/main/res/layout/content.xml
+++ b/recycler/src/main/res/layout/content.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#49f">
-    <TextView
+    android:background="#49f"
+    android:id="@+id/bbbb">
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:name="com.blizzmi.recycler.fragment.ContentFragment"
+        />
 </LinearLayout>
