--- a/notice/src/main/res/layout/item_notice.xml
+++ b/notice/src/main/res/layout/item_notice.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="wrap_content"
+    <com.huhushengdai.notice.widget.MyTextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher" />
+        android:text="我是自定义"/>
+
 </LinearLayout>
