--- a/edit/src/main/res/layout/activity_main.xml
+++ b/edit/src/main/res/layout/activity_main.xml
@@ -4,20 +4,32 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.blizzmi.edit.MainActivity"
-    android:orientation="vertical">
+    tools:context="com.blizzmi.edit.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:onClick="clickEvent"/>
+        android:onClick="clickEvent"
+        android:text="Hello World!" />
+
     <EditText
         android:id="@+id/main_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/main_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher" />
 </LinearLayout>
