--- a/drawer/src/main/res/layout/activity_main.xml
+++ b/drawer/src/main/res/layout/activity_main.xml
@@ -1,50 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.blizzmi.drawer.MainActivity"
-    >
+    android:background="#b93"
+    android:orientation="vertical"
+    tools:context="com.blizzmi.drawer.MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/holo_green_light">
+    <com.blizzmi.drawer.widget.BubbleImageView
+        android:id="@+id/main_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        android:layout_margin="10dp"
+        app:expectedWidth="300"
+        app:dstBg="@drawable/mesbox_y_9" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="个人登陆页面1"
-            android:padding="10dp"
-            android:onClick="startDrawer"/>
-    </RelativeLayout>
+    <com.blizzmi.drawer.widget.LogoLoadingView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <!--<ImageView-->
+    <!--android:id="@+id/main_img"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:src="@mipmap/m_bg"-->
+    <!--android:maxWidth="10dp"-->
+    <!--android:background="#92f"-->
+    <!--android:layout_margin="10dp"/>-->
 
-    <LinearLayout
-        android:id="@+id/right"
-        android:layout_width="290dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/holo_green_light"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/right_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="启动密码"
-            android:onClick="startPassword"
-            android:padding="10dp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="校准时间" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="关于和帮助
-            " />
-    </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
