TextDrawable 完成，有背景色功能。修改circleView，使其不放大显示drawable，只平移到中心

--- a/testdrawable/src/main/res/values/attrs.xml
+++ b/testdrawable/src/main/res/values/attrs.xml
@@ -4,4 +4,13 @@
         <attr name="circle_border_width" format="dimension" />
         <attr name="circle_border_color" format="color" />
     </declare-styleable>
+
+    <!--重叠ImageView-->
+    <declare-styleable name="Overlap">
+        <!--需要的背景形状-->
+        <attr name="dstBg" format="reference" />
+        <attr name="maxWidth" format="integer" />
+        <attr name="minWidth" format="integer" />
+        <attr name="expectedWidth" format="integer" />
+    </declare-styleable>
 </resources>
