--- a/testdrawable/src/main/res/layout/activity_main.xml
+++ b/testdrawable/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +19,9 @@
 
     <com.huhushengdai.testdrawable.CircleImageView
         android:id="@+id/main_img2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="#394"/>
+        android:layout_width="285px"
+        android:layout_height="277px"
+        android:background="#394"
+        app:circle_border_width="6px"
+        app:circle_border_color="@color/colorPrimary"/>
 </LinearLayout>
