--- a/activityoptions/src/main/res/layout/activity_main.xml
+++ b/activityoptions/src/main/res/layout/activity_main.xml
@@ -19,6 +19,15 @@
         android:text="Hello World!" />
 
     <ImageView
+        android:id="@+id/animation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="animation"
+        android:padding="20dp"
+        android:src="@mipmap/bx_female"
+        android:transitionName="img" />
+
+    <ImageView
         android:id="@+id/female"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
