--- a/activityoptions/src/main/res/layout/activity_second.xml
+++ b/activityoptions/src/main/res/layout/activity_second.xml
@@ -5,7 +5,8 @@
     android:id="@+id/activity_second"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.blizzmi.activityoptions.SecondActivity">
+    tools:context="com.blizzmi.activityoptions.SecondActivity"
+    android:background="#59f2">
 
 
     <android.support.v4.view.ViewPager
