--- a/activityoptions/src/main/res/values/styles.xml
+++ b/activityoptions/src/main/res/values/styles.xml
@@ -8,5 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-
+    <style name="ListImg">
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:src">@mipmap/thu</item>
+    </style>
+    <style name="transparent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
