--- a/viewpager/src/main/res/layout/activity_main.xml
+++ b/viewpager/src/main/res/layout/activity_main.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.blizzmi.viewpager.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
 
-    <android.support.v4.view.ViewPager
+    <com.blizzmi.viewpager.widget.MyViewPager
         android:id="@+id/main_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="500dp"
+        android:layout_alignParentBottom="true" />
+
+    <TextView
+        android:id="@+id/main_text_s"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/main_pager"
+        android:layout_centerHorizontal="true"
+        android:text="Hello World!" />
+    <TextView
+        android:id="@+id/main_text_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/main_text_s"
+        android:layout_centerHorizontal="true"
+        android:text="Hello World!"
+        android:textSize="20sp" />
+</RelativeLayout>
